[workspace]

members = [
    "client",
    "common",
    "server",
]
resolver = "2"
#[package]
#name = "coinpusher"
#version = "0.1.0"
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#rand = "0.8.5"
#threadpool = { path = "./src/threadpool" }
#thread_joiner = { path = "./src/thread_joiner" }
